k8s/installations/traefik-dashboard/solver-service.yml
apiVersion: v1
kind: Service
metadata:
  name: acme-http-solver
  namespace: traefik
spec:
  selector:
    acme.cert-manager.io/http01-solver: "true"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8089
