k8s/installations/traefik-dashboard/solver-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cert-manager-challenge
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.superfast-delivery.yashraj-jaiswal.site`) && PathPrefix(`/.well-known/acme-challenge/`)
      kind: Rule
      services:
        - name: acme-http-solver
          port: 80
